Fix(style) Adjusts label length and adds ellipsis overflow UD-30

--- a/src/styles/unibase/forms/__forms.sass
+++ b/src/styles/unibase/forms/__forms.sass
@@ -1,4 +1,4 @@
-$labelLength: pxToRem(250)
+$labelLength: pxToRem(200)
 $inputHeight: 2rem
 
 %formWidth
@@ -37,6 +37,9 @@ uni-field
         display: inline-block
         line-height: $inputHeight
         width: $labelLength
+        white-space: nowrap
+        overflow: hidden
+        text-overflow: ellipsis
 
         & + *
             width: calc(100% - #{$labelLength})
